--- a/index.html
+++ b/index.html
@@ -456,9 +456,10 @@
 
                     <div class="col-sm-6 mt-4 mt-sm-0 pt-2 pt-sm-0">
                         <ul class="list-unstyled terms-service text-sm-left mb-0">
-                            <li class="list-inline-item mb-0"><a href="terms.html" class="footer-text mr-2">Terms of Service</a></li>
-                            <li class="list-inline-item mb-0"><a href="privacy.html" class="footer-text mr-2">Privacy Policy</a></li>
-                            <li class="list-inline-item mb-0"><a href="cookie.html" class="footer-text mr-2">Cookie Policy</a></li>
+<!--                             <li class="list-inline-item mb-0"><a href="terms.html" class="footer-text mr-2">Terms of Service</a></li> -->
+                            <li class="list-inline-item mb-0"><a href="https://akash1525.github.io/Docket3/terms.html" class="footer-text mr-2">Terms of Service</a></li>
+                            <li class="list-inline-item mb-0"><a href="https://akash1525.github.io/Docket3/privacy.html" class="footer-text mr-2">Privacy Policy</a></li>
+                            <li class="list-inline-item mb-0"><a href="https://akash1525.github.io/Docket3/cookie.html" class="footer-text mr-2">Cookie Policy</a></li>
                             <!-- <li class="list-inline-item mb-0"><a href="contact.html" class="footer-text">Contact</a></li> -->
                         </ul>
                     </div><!--end col-->
